# Sally

./: .env.example  .gitignore  2026-07-17-sally-live-translation-design.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  api.ts  i18n.ts  platform.ts  store.ts  styles.css  transparency.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  diarization.rs  diarize.rs  error.rs  fbank.rs  lang.rs  lib.rs  main.rs  models.rs  readout.rs  session.rs  split.rs  store.rs  timeline.rs
src-tauri/src/audio/: app_capture.rs  capture.rs  coreaudio_tap.rs  mod.rs  pipeline.rs  playback.rs  recorder.rs  sck_capture.rs
src-tauri/src/gemini/: cleanup.rs  live.rs  mod.rs
src/components/: CornerTools.tsx  Icons.tsx  Panels.tsx  Processing.tsx  ReviewScreen.tsx  SessionBar.tsx  Settings.tsx  SetupWizard.tsx  TitleBar.tsx
