[package]
name = "sally"
version = "0.18.2"
edition = "2021"
description = "Floating live translation and transcription for meetings"
license = "MIT"

[lib]
name = "sally_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: window transparency on macOS (transparency slider).
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
cpal = "0.15"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"

# ort (ONNX Runtime bindings, speaker-change splitting's model): the default
# download-then-static-link strategy is fine on Windows, but ort-sys's
# download for aarch64-apple-darwin isn't actually a static archive — it
# started failing to link on GitHub's macos-26 runner (build succeeded
# identically on this exact runner label hours earlier in the same release
# cycle, then failed twice in a row with "could not find native static
# library `onnxruntime`" — ort-sys's own build script reached the link step
# without reporting a download/extraction error, so the downloaded artifact
# itself doesn't match what `-lstatic=onnxruntime` expects for this
# target). macOS instead uses `load-dynamic` (dlopen at runtime) with a
# bundled dylib — see lib.rs's `ort::init_from` call and
# tauri.macos.conf.json's resource bundling.
[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = "=2.0.0-rc.12"

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "std", "tls-native", "tracing", "api-24"] }
# Native system-audio capture (no BlackHole). Swift bridge builds with the
# Xcode toolchain present on macOS runners; not compiled on other targets.
screencapturekit = "8"
# Core Audio process taps (macOS 14.4+): the newer, entitlement-only path
# that doesn't need Screen Recording permission. No high-level Rust wrapper
# exists for this API yet, so coreaudio_tap.rs is hand-written FFI against
# these raw generated bindings.
objc2 = "0.6"
objc2-core-audio = { version = "0.3", features = ["AudioHardware", "objc2", "objc2-foundation", "objc2-core-audio-types"] }
objc2-core-audio-types = "0.3"
objc2-core-foundation = "0.3"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSObject", "NSString", "NSUUID"] }

[target.'cfg(windows)'.dependencies]
# Per-app audio capture: WASAPI process loopback + session enumeration.
wasapi = "0.19"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Com",
    "Win32_Media_Audio",
] }

[profile.release]
# panic = "abort" removed: it made any background-thread panic (e.g. the
# audio callback thread on a mid-meeting device disconnect) kill the whole
# process instantly. Default unwind lets a panic in one capture thread stay
# contained to that thread instead of aborting the app.
codegen-units = 1
lto = true
opt-level = "s"
strip = true

